--- a/todoapp/todolist/templates/todolist/index.html
+++ b/todoapp/todolist/templates/todolist/index.html
@@ -2,4 +2,19 @@
 
 {% block content %}
 
+{% for todo in todo_list %}
+    <div class="ui segment">
+        <p class="ui big header">№{{ todo.id }} {{ todo.title }}</p>
+
+        {% if todo.is_complete == False %}
+            <span class="ui gray label">Не завершено</span>
+            <a class="ui primary basic button" href="{% url 'update' todo_id=todo.id %}">Закрыть</a>
+        {% else %}
+            <span class="ui green label">Завершено</span>
+            <a class="ui blue button" href="{% url 'update' todo_id=todo.id %}">Открыть</a>
+        {% endif %}
+        <a class="ui negative basic button" href="{% url 'delete' todo_id=todo.id %}">Удалить</a>
+    </div>
+{% endfor %}
+
 {% endblock content %}
