--- a/todoapp/todolist/templates/todolist/index.html
+++ b/todoapp/todolist/templates/todolist/index.html
@@ -2,6 +2,20 @@
 
 {% block content %}
 
+<div style="margin-top: 50px;" class="ui container">
+    <h1 class="ui center aligned header">Мой менеджер задач</h1>
+    <h3 class="test_style">Управляй своим временем</h3>
+    <form class="ui form" action="{% url 'add' %}" method="post">
+        {% csrf_token %}
+        <div class="field">
+            <label>Новая задача</label>
+            <input type="text" name="title" placeholder="Введите назавание задачи"><br>
+        </div>
+        <button class="ui teal basic button" type="submit">Добавить</button>
+    </form>
+</div>
+
+
 {% for todo in todo_list %}
     <div class="ui segment">
         <p class="ui big header">№{{ todo.id }} {{ todo.title }}</p>
